--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   </head>
   <body ng-controller="mainCtrl">
 
-    {{test}}
+    <!-- {{test}} -->
     <ui-view></ui-view>
 
     <!-- <script src="/node_modules/angular/angular.js"></script>
@@ -15,5 +15,7 @@
     <script src="mainCtrl.js"></script> -->
     <script src="./libs/libs.js"></script>
     <script src="./dist/js/bundle.js"></script>
+    <!-- <script src="mainCtrl.js"></script>
+    <script src="mainService.js"></script> -->
   </body>
 </html>
