--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="./dist/styles.css" />
   </head>
   <body ng-controller="mainCtrl">
+
+    <div class="main_nav">
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4 col-sm-offset-4">
+            <button class="btn btn-primary btn-block btn-custom" ui-sref="home">Go to home
+            </button>
+          </div>
+          <div class="col-md-4 col-md-offset-4 col-sm-offset-4">
+            <button class="btn btn-primary btn-block btn-custom" ui-sref="products">Go to products
+            </button>
+          </div>
+          <div class="col-md-4 col-md-offset-4 col-sm-offset-4">
+            <button class="btn btn-primary btn-block btn-custom" ui-sref="about">Go to about
+            </button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+
 
     <!-- {{test}} -->
     <ui-view></ui-view>
