--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,8 @@
     <div class="col-sm-6 offset-md-4">
       <img src="images/soilbnr2.png" alt="soil" />
     </div>
+  </div>
+  <div class="row">
     <div class="col-sm-6 text-center col-md-offset-2">
       <h2>Turn your food waste into a rich organic natural soil by using worms to eat decaying material and turning the waste into a beautiful rich organic material called black gold wormpoop or castings. </h2>
       <p class="lead">I am Marcia L. Iannone, an environmental consultant and a Vermiculture Specialist. I became interested in this process while employed as the Recycling Coordinator for an environmental program entitled, LandLab "A Center for Education and Research in the Sustainable Use of Resources," at the California State Polytechnic University, Pomona, California. I worked at the University from 1984 through January 1998.</p>
