--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title></title>
+    <title>WormPoop</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Hind+Vadodara" rel="stylesheet">
     <link rel="stylesheet" href="./dist/styles.css" />
@@ -73,14 +73,14 @@
 <div id="about" class="pad-section">
   <div class="container">
   <div class="row">
-    <div class="col-sm-6 offset-md-4">
+    <div class="col-md-4 col-md-offset-2">
       <img src="images/soilbnr2.png" alt="soil" />
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-6 text-center col-md-offset-2">
+    <div class="col-md-4 text-center col-md-offset-4">
       <h2>Turn your food waste into a rich organic natural soil by using worms to eat decaying material and turning the waste into a beautiful rich organic material called black gold wormpoop or castings. </h2>
-      <p class="lead">I am Marcia L. Iannone, an environmental consultant and a Vermiculture Specialist. I became interested in this process while employed as the Recycling Coordinator for an environmental program entitled, LandLab "A Center for Education and Research in the Sustainable Use of Resources," at the California State Polytechnic University, Pomona, California. I worked at the University from 1984 through January 1998.</p>
+      <p>I am Marcia L. Iannone, an environmental consultant and a Vermiculture Specialist. I became interested in this process while employed as the Recycling Coordinator for an environmental program entitled, LandLab "A Center for Education and Research in the Sustainable Use of Resources," at the California State Polytechnic University, Pomona, California. I worked at the University from 1984 through January 1998.</p>
     </div>
   </div>
 </div>
@@ -88,16 +88,21 @@
 
 <!-- /second section -->
 <div class="header_text">
-  <div id="products" class="jumbotron">
+  <div id="products" class="container">
     <div class="row">
+      <div class="col-md-4 offset-md-1">
+        <img src="images/twoplot.png" alt="soil" />
+      </div>
       <div  class="col-md-4 col-md-offset-4">
         <h1>Available Products for Sale</h1>
       </div>
-      <div class="col-md-4 offset-md-8">
-        <img src="images/twoplot.png" alt="soil" />
+      <div class="col-md-4 offset-md-7">
+        <img src="images/exbpic2Large.png" alt="soil" />
+      </div>
       </div>
     </div>
   </div>
+
 </div>
 
 <div class="jumbotron">
@@ -114,6 +119,9 @@
     <th>
       $10.00
     </th>
+    <th ng-click="add1tocart(10)">
+      Add To Cart!
+    </th>
   </tr>
   <tr>
     <th>
@@ -124,6 +132,9 @@
     </th>
     <th>
       $18.00
+    </th>
+    <th ng-click="add1tocart(18)">
+      Add To Cart!
     </th>
   </tr>
   <tr>
@@ -136,6 +147,9 @@
     <th>
       $25.00
     </th>
+    <th ng-click="add1tocart(25)">
+      Add To Cart!
+    </th>
   </tr>
   <tr>
     <th>
@@ -146,6 +160,9 @@
     </th>
     <th>
       $40.00
+    </th>
+    <th ng-click="add1tocart(40)">
+      Add To Cart!
     </th>
   </tr>
   <tr>
@@ -158,6 +175,9 @@
     <th>
       $80.00
     </th>
+    <th ng-click="add1tocart(80)">
+      Add To Cart!
+    </th>
   </tr>
   <tr>
     <th>
@@ -166,8 +186,11 @@
     <th>
       Three Pounds
     </th>
-
-    <th>$120.00
+    <th>
+      $120.00
+    </th>
+    <th ng-click="add1tocart(120)">
+      Add To Cart!
     </th>
   </tr>
   <tr>
@@ -180,6 +203,9 @@
     <th>
       $160.00
     </th>
+    <th ng-click="add1tocart(160)">
+      Add To Cart!
+    </th>
   </tr>
   <tr>
     <th>
@@ -191,11 +217,30 @@
     <th>
       $300.00
     </th>
+    <th ng-click="add1tocart(300)">
+      Add To Cart!
+    </th>
   </tr>
-
+<div class="total_cost" ng-model="total">
+  Total in Usd: {{total}}
+</div>
 </table>
+<div class="pay">
 
+  <form action="/your-server-side-code" method="POST">
+    <script
+    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    data-key="pk_test_6pRNASCoBOKtIshFeQd4XMUh"
+    data-amount="{{total}}"
+    data-name="Stripe.com"
+    data-description="Widget"
+    data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+    data-locale="auto"
+    data-zip-code="true">
+    </script>
+  </form>
 
+</div>
 
 
 
@@ -227,7 +272,6 @@
   </div>
 </div>
 
-<!-- google map -->
 
 
 <footer>
